--- a/Txt/app/src/main/res/layout/activity_main.xml
+++ b/Txt/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,14 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/ls" />
+        android:id="@+id/ls"
+        android:divider="@null"
+        android:layout_weight="1" />
+
+    <Button
+        android:text="Button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/addButton" />
 
 </LinearLayout>
